Bug 1042833 - Add 'none' architecture used in --disable-ion builds, r=jandem.