js/src/jit/BaselineCompiler.h
@@ -18,6 +18,8 @@
 # include "jit/arm/BaselineCompiler-arm.h"
 #elif defined(JS_CODEGEN_MIPS)
 # include "jit/mips/BaselineCompiler-mips.h"
+#elif defined(JS_CODEGEN_NONE)
+# include "jit/none/BaselineCompiler-none.h"
 #else
 # error "Unknown architecture!"
 #endif
