js/src/jit/Lowering.h
@@ -19,6 +19,8 @@
 # include "jit/arm/Lowering-arm.h"
 #elif defined(JS_CODEGEN_MIPS)
 # include "jit/mips/Lowering-mips.h"
+#elif defined(JS_CODEGEN_NONE)
+# include "jit/none/Lowering-none.h"
 #else
 # error "Unknown architecture!"
 #endif
